ecommerce/pages/add-ons/order-grid/2.6.0/release-notes-order-grid.md
Add-on for eConnect for M3
==========================

Configurable Order Grid
=======================

Version 2.6.0
-------------

**Table of Contents**

-   [Overview](#overview)

-   [Environment Details](#environment-details)

-   [Standard Features](#standard-features)

-   [Highlight](#highlight)

-   [Pre-requisites](#limitations)

-   [Limitations](#limitations)

Overview
========

**LeanSwift eConnect for Infor M3** is a Magento extension that provides simple
yet powerful integration between Magento eCommerce platform and Infor M3.

Extends standard Magento functionality and offers several transactions to ensure
your eCommerce websites contain up-to-date information from your M3 ERP.

**LeanSwift eConnect for Infor M3** is available for Magento Open Source and
Magento Commerce and for Infor M3 version 7.x and above. It is also compatible
with multi-tenant cloud editions of Infor M3 (Cloudsuite).

**Add-on Configurable Order Grid** for eConnect extends the standard Magento
functionality and provides quick and easy Matrix Ordering capability to product
pages with synchronization from M3.

Environment Details
===================

| **Environment**     | **Version** |
|---------------------|-------------|
| Magento Open source | 2.4.3       |
| Magento Commerce    | 2.4.3       |
| eConnect Community  | 22.2.0      |
| eConnect Commerce   | 22.2.0      |
| eConnect Base       | 6.1.1       |
| Rabbitmq            | 3.7.28      |
| Infor M3            | 16.1        |
| PHP                 | 7.4         |
| ION Package Version | 3.2.0       |

Standard Features
=================

Functionality remains the same as in the previous version.

The module extends the standard Magento functionality for displaying products
based on selected attributes along with stock and price details.

• Displays real-time stock and price details of each product variant

• Can add different product variants of a Magento Configurable Product to cart
instantly

• X and Y axis attributes are configurable by administrator

Highlight
=========

Order grid is made compatible with latest version of eConnect-Base 6.1.1 &
eConnect 22.2.0

Limitations
===========

• Grid is available only for Configurable products

• Up to 3 attributes can be configured to display in the frontend

• eConnect and hence the Order Grid add-on, can be set to work with only ONE of
the two options, exclusively

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(1) LeanSwift eLink or 

(2) ION Document Flows and ION APIs
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Point of Contacts
-----------------

-   <prabhu.mano@leanswift.com>

-   <nanthini.muralidaran@leanswift.com>

-   [deepthi.tadikamalla\@leanswift.com](mailto:deepthi@leanswift.com)

-   <narayanan.gurusamy@leanswift.com>
