ecommerce/pages/add-ons/order-grid/3.0.0/release-notes-order-grid.md
Add-on for eConnect for M3
==========================

Configurable Order Grid
=======================

Version 3.0.0
-------------

Table of Contents

- [Environment Details](#environment-details)
- [Standard Features](#standard-features)
- [Highlight](#highlight)
- [Limitations](#limitations)
- [Bug Fixes](#bug-fixes)
- [Point of Contacts](#point-of-contacts)

Overview
========

**LeanSwift eConnect for Infor M3** is a Magento extension that provides simple
yet powerful integration between Magento eCommerce platform and Infor M3.

Extends standard Magento functionality and offers several transactions to ensure
your eCommerce websites contain up-to-date information from your M3 ERP.

**LeanSwift eConnect for Infor M3** is available for Magento Open Source and
Magento Commerce and for Infor M3 version 7.x and above. It is also compatible
with multi-tenant cloud editions of Infor M3 (Cloudsuite).

**Add-on Configurable Order Grid** for eConnect extends the standard Magento
functionality and provides quick and easy Matrix Ordering capability to product
pages with synchronization from M3.

Environment Details
===================

| **Environment**     | **Version** |
|---------------------|-------------|
| Magento Commerce    | 2.4.6       |
| Magento Community   | 2.4.7       |
| eConnect Commerce   | 24.1.0      |
| eConnect Community  | 24.1.0      |
| eConnect Base       | 6.4.0       |
| Rabbitmq            | 3.7.28      |
| Infor M3            | 16.1        |
| PHP                 | 8.1         |
| ION Package Version | 3.2.1       |

Standard Features
=================

Functionality remains the same as in the previous version.

The module extends the standard Magento functionality for displaying products
based on selected attributes along with stock and price details.

• Displays real-time stock and price details of each product variant

• Can add different product variants of a Magento Configurable Product to the cart
instantly

• X and Y axis attributes are configurable by the administrator

Highlight
=========

- Order grid is made compatible with Magento v2.4.7 and PHP v8.1(Supports v8.2 too)

- Tested on eConnect-base v6.4.0 and eConnect v24.1.0

Limitations
===========

• Grid is available only for Configurable products

• Up to 3 attributes can be configured to display in the frontend

• eConnect and hence the Order Grid add-on, can be set to work with only ONE of
the two options, exclusively

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(1) LeanSwift eLink or 

(2) ION Document Flows and ION APIs
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bug Fixes
=========

- Resolved the exception thrown while adding the out-of-stock product with back order to the cart

- Resolved the exception thrown while opening the configurable product once the customer has logged into the site

Point of Contacts
-----------------

-   <prabhu.manoharan3@wipro.com>

-   <narayanan.gurusamy@wipro.com>

-   <silambarasan.kj3@wipro.com>

-   <saurabh.gupta77@wipro.com>
  
-   <vaithiyanathan.paramasivam@wipro.com>

-   <kalaivani.nagarajan1@wipro.com>
